# Homework3

./: 4022_gz_dmmf_drone  CMakeLists.txt  README.md  dds_topics.yaml
aerial_robotics/: .gitignore  DDS_run.sh
aerial_robotics/ros2_ws/src/force_land/: CMakeLists.txt  package.xml
aerial_robotics/ros2_ws/src/force_land/src/: force_land_node.cpp
aerial_robotics/ros2_ws/src/offboard_rl/: CMakeLists.txt  package.xml
aerial_robotics/ros2_ws/src/offboard_rl/include/offboard_rl/: utils.h
aerial_robotics/ros2_ws/src/offboard_rl/src/: go_to_point.cpp
aerial_robotics/ros2_ws/src/read_rpy/: CMakeLists.txt  package.xml
aerial_robotics/ros2_ws/src/read_rpy/src/: read_rpy_node.cpp
dmmf_drone/: model.config  model.sdf
force_land_bag_1/: metadata.yaml
triangular_elix_bag_2/: metadata.yaml  triangular_elix_bag_2_0.db3
